--- a/index.html
+++ b/index.html
@@ -1,69 +1,233 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ecommerce Website</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/3bf34615bf.js" crossorigin="anonymous"></script>
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/3bf34615bf.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
     <section id="header">
-        <a href="#"><img src="img/logo.png" alt="" srcset="" class="logo"></a>
-        <div>
-            <ul id="navbar">
-                <li><a class="active" href="index.html">Home</a></li>
-                <li><a href="shop.html">Shop</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-                <li><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
-            </ul>
-        </div>
-
+      <a href="#"><img src="img/logo.png" alt="" srcset="" class="logo" /></a>
+      <div>
+        <ul id="navbar">
+          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="shop.html">Shop</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+          <li>
+            <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+          </li>
+        </ul>
+      </div>
     </section>
     <section id="hero">
-        <h4>Trade-in-offer</h4>
-        <h2>Super Value Deals</h2>
-        <h1>On all products</h1>
-        <p>Save more with coupen & up to 70% off!</p>
-        <button>Shop Now</button>
+      <h4>Trade-in-offer</h4>
+      <h2>Super Value Deals</h2>
+      <h1>On all products</h1>
+      <p>Save more with coupen & up to 70% off!</p>
+      <button>Shop Now</button>
     </section>
 
     <section id="feature" class="section-p1">
-        <div class="fe-box">
-            <img src="img/features/f1.png" alt="">
-            <h4>Free Shipping</h4>
-
-        </div>
-        <div class="fe-box">
-            <img src="img/features/f2.png" alt="">
-            <h4>Online Order</h4>
-
-        </div>
-        <div class="fe-box">
-            <img src="img/features/f3.png" alt="">
-            <h4>Save Money</h4>
-
-        </div>
-        <div class="fe-box">
-            <img src="img/features/f4.png" alt="">
-            <h4>Promotions</h4>
-
-        </div>
-        <div class="fe-box">
-            <img src="img/features/f5.png" alt="">
-            <h4>Happy Sell</h4>
-
-        </div>
-        <div class="fe-box">
-            <img src="img/features/f6.png" alt="">
-            <h4>24/7 Support</h4>
-
-        </div>
+      <div class="fe-box">
+        <img src="img/features/f1.png" alt="" />
+        <h4>Free Shipping</h4>
+      </div>
+      <div class="fe-box">
+        <img src="img/features/f2.png" alt="" />
+        <h4>Online Order</h4>
+      </div>
+      <div class="fe-box">
+        <img src="img/features/f3.png" alt="" />
+        <h4>Save Money</h4>
+      </div>
+      <div class="fe-box">
+        <img src="img/features/f4.png" alt="" />
+        <h4>Promotions</h4>
+      </div>
+      <div class="fe-box">
+        <img src="img/features/f5.png" alt="" />
+        <h4>Happy Sell</h4>
+      </div>
+      <div class="fe-box">
+        <img src="img/features/f6.png" alt="" />
+        <h4>24/7 Support</h4>
+      </div>
     </section>
 
-    
-<script src="script.js"></script>
-</body>
+    <section id="product1" class="section-p1">
+      <h2>Featured Product</h2>
+      <p>Summer Collection New Modern Design</p>
+      <div class="pro-container">
+        <div class="pro">
+          <img src="img/products/f1.jpg" alt="" />
+          <div class="des">
+            <span>adidas</span>
+            <h5>Cartoon Astronout T-shirts</h5>
+            <div class="star">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <h4>$78</h4>
+          </div>
+          <a href="#">
+            <span class="cart">
+              <i class="fa-solid fa-cart-shopping"></i>
+            </span>
+          </a>
+        </div>
+        <div class="pro">
+          <img src="img/products/f2.jpg" alt="" />
+          <div class="des">
+            <span>adidas</span>
+            <h5>Cartoon Astronout T-shirts</h5>
+            <div class="star">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <h4>$78</h4>
+          </div>
+          <a href="#">
+            <span class="cart">
+              <i class="fa-solid fa-cart-shopping"></i>
+            </span>
+          </a>
+        </div>
+        <div class="pro">
+          <img src="img/products/f3.jpg" alt="" />
+          <div class="des">
+            <span>adidas</span>
+            <h5>Cartoon Astronout T-shirts</h5>
+            <div class="star">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <h4>$78</h4>
+          </div>
+          <a href="#">
+            <span class="cart">
+              <i class="fa-solid fa-cart-shopping"></i>
+            </span>
+          </a>
+        </div>
+        <div class="pro">
+          <img src="img/products/f4.jpg" alt="" />
+          <div class="des">
+            <span>adidas</span>
+            <h5>Cartoon Astronout T-shirts</h5>
+            <div class="star">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <h4>$78</h4>
+          </div>
+          <a href="#">
+            <span class="cart">
+              <i class="fa-solid fa-cart-shopping"></i>
+            </span>
+          </a>
+        </div>
+        <div class="pro">
+          <img src="img/products/f5.jpg" alt="" />
+          <div class="des">
+            <span>adidas</span>
+            <h5>Cartoon Astronout T-shirts</h5>
+            <div class="star">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <h4>$78</h4>
+          </div>
+          <a href="#">
+            <span class="cart">
+              <i class="fa-solid fa-cart-shopping"></i>
+            </span>
+          </a>
+        </div>
+        <div class="pro">
+          <img src="img/products/f6.jpg" alt="" />
+          <div class="des">
+            <span>adidas</span>
+            <h5>Cartoon Astronout T-shirts</h5>
+            <div class="star">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <h4>$78</h4>
+          </div>
+          <a href="#">
+            <span class="cart">
+              <i class="fa-solid fa-cart-shopping"></i>
+            </span>
+          </a>
+        </div>
+        <div class="pro">
+          <img src="img/products/f7.jpg" alt="" />
+          <div class="des">
+            <span>adidas</span>
+            <h5>Cartoon Astronout T-shirts</h5>
+            <div class="star">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <h4>$78</h4>
+          </div>
+          <a href="#">
+            <span class="cart">
+              <i class="fa-solid fa-cart-shopping"></i>
+            </span>
+          </a>
+        </div>
+        <div class="pro">
+          <img src="img/products/f8.jpg" alt="" />
+          <div class="des">
+            <span>adidas</span>
+            <h5>Cartoon Astronout T-shirts</h5>
+            <div class="star">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <h4>$78</h4>
+          </div>
+          <a href="#">
+            <span class="cart">
+              <i class="fa-solid fa-cart-shopping"></i>
+            </span>
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <script src="script.js"></script>
+  </body>
 </html>
