--- a/index.html
+++ b/index.html
@@ -20,10 +20,16 @@
           <li><a href="shop.html">Shop</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact Us</a></li>
-          <li>
+          <li id="lg-bag">
             <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
           </li>
+          <a href="#" id="close"><i class="fa fa-times" ></i></a>
         </ul>
+      </div>
+      <div id="mobile">
+        <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+        <i id="bar" class="fas fa-outdent"></i>
+        
       </div>
     </section>
     <section id="hero">
@@ -431,6 +437,68 @@
     <h3>New Trendy Pieces</h3>
   </div>
 </section>
+
+<section id="newsletter" class="section-p1 section-m1">
+  <div class="newstext">
+    <h4>Sign Up For Newsletters</h4>
+    <p>Get E-mail updates about our latest shop and <span>special offers.</span></p>
+  </div>
+  <div class="form">
+    <input type="text" placeholder="your email address">
+    <button class="normal">Sign UP</button>
+  </div>
+</section>
+
+<footer class="section-p1">
+  <div class="col">
+    <img class="logo" src="img/logo.png" alt="">
+    <h4>Contact</h4>
+    <p> <strong>Address:</strong> Kathmandu , Nepal</p>
+    <p><strong>Phone:</strong>+977 9860240445</p>
+    <p><strong>Hours:</strong>9:00 am - 7:00 pm, Sun - Sat</p>
+    <div class="follow">
+      <h4>Follow Us</h4>
+      <div class="icon">
+        <i class="fab fa-facebook"></i>
+        <i class="fab fa-twitter"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-pinterest-p"></i>
+        <i class="fab fa-youtube"></i>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <h4>About</h4>
+    <a href="#">About Us</a>
+    <a href="#">Delivery Information</a>
+    <a href="#">Privacy Policy</a>
+    <a href="#">Terms & Conditions</a>
+    <a href="#">Contact Us</a>
+  </div>
+  <div class="col">
+    <h4>My Account</h4>
+    <a href="#">Sign In</a>
+    <a href="#">View Cart</a>
+    <a href="#">My wishlist</a>
+    <a href="#">Track My Order</a>
+    <a href="#">Help</a>
+  </div>
+
+  <div class="col install">
+    <h4>Install App</h4>
+    <p>From App Store or Google Play </p>
+    <div class="row">
+      <img src="img/pay/app.jpg" alt="">
+      <img src="img/pay/play.jpg" alt="">
+    </div>
+    <p>Secured Payment Gateways</p>
+    <img src="img/pay/pay.png" alt="">
+  </div>
+
+  <div class="copyright">
+    <p>@ 2023, Arun Khanal</p>
+  </div>
+</footer>
 
     <script src="script.js"></script>
   </body>
